# LLM_playground

./: export_env.py  test.json
ChatGPT_function_calling/: function_call.py
Deepseek_RAG/: .env  deepseek_rag.py  langchain_graph_RAG.py  requirements.txt  项链.txt
FC_RAG/: .env  build_vector_db.py  pydantic_tool_rag_chroma.py  requirements.txt  restart.sh  web_service.py
FireCrawl_web_scraper_for_AI/: .env  main.py
GPT4o/: GPT4o_image_qa.py  GPT4o_video_audio_qa.py  Llava_video_on_Ollama.py  llava_video_hf.py
Google_drive_ai/: .env  Gdrive_agent.py  GoogleDriveManager.py  example.txt  gdrive_setup.py  token.json
Kimi/: 36kr_summary.py  Kimi_UI.py  firecrawl_url_extract.py  function_call_kimi.py  kimi_RAG.py  test.html  test.json
LLM_OS/: llm_os_prep.txt  llmos_gpt4o.py
Monica_copy/: README.md  docker-compose.yml  requirements.txt
MyGraphRagTest/: commands.md
Ollama_inference/: murf_voice_test.py  ollama_chat.py  ollama_chat_server.py  ollama_client.js  test.json
Ollama_llama3_RAG/: llama3_RAG.py  ollama_openai_api.py
ai-agent-project/: README.md  pyproject.toml  requirements.txt
ai-agent-project/config/: config.yaml  mcp_config.yaml
ai-agent-project/src/: main.py
ai-agent-project/src/agent/: __init__.py  core.py  models.py
ai-agent-project/src/api/: models.py  routes.py
ai-agent-project/src/config/: settings.py
ai-agent-project/src/llm/: base.py  lmstudio_client.py  ollama_client.py  openai_client.py
ai-agent-project/src/mcp/: __init__.py  client.py  server.py
ai-agent-project/tests/: test_agent.py  test_api.py  test_llm.py
(+1179 files in other folders)
