[tool.poetry]
name = "ai-agent-project"
version = "0.1.0"
description = "An AI agent project with configurable LLM models and an MCP server."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.0"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
httpx = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"